# manus-cli

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: codeql.yml  dependency-review.yml  gemini-review.yml  pr-review.yml
src/manus_cli/: __main__.py  cli.py
src/manus_cli/api/: client.py  files.py  models.py  projects.py  tasks.py  webhooks.py
src/manus_cli/ci/: __init__.py  gemini_review.py
src/manus_cli/core/: auth.py  config.py  errors.py  poller.py
src/manus_cli/repl/: commands.py  prompt.py  renderer.py  session.py
src/manus_cli/utils/: display.py
tests/: conftest.py  test_cli.py
tests/test_api/: test_client.py  test_files.py  test_models.py  test_projects.py  test_tasks.py  test_webhooks.py
tests/test_ci/: test_gemini_review.py
tests/test_core/: test_auth.py  test_config.py  test_errors.py  test_poller.py
tests/test_repl/: test_commands.py  test_prompt.py  test_renderer.py  test_session.py
