[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manus-cli"
version = "0.1.0"
description = "CLI tool for Manus AI Agent API"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.scripts]
manus = "manus_cli.cli:app_main"

[tool.hatch.build.targets.wheel]
packages = ["src/manus_cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
